# movie-score-predictions

./: README.md  pyproject.toml
data/: preprocessed_movie_data_1.csv  preprocessed_movie_data_2.csv  preprocessed_movie_data_3.csv
data_utils/: load_data.py  preprocess_data.py
notebooks/: 1_data_retrieving_analysis.ipynb  2_EDA.ipynb
scripts/: run_individual.py  run_summary.py  utils.py
